--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # Ignore resume
 /*.pages
+/*.docx
 
 # Ignore the Jumpstart_Blogger, which contains it's own repo
 *Jumpstart_Blogger/*
@@ -20,5 +21,8 @@
 /*.rb
 /Curriculum/*
 
-#Ignore the Capstone project, which contains it's own repo
+# Ignore the Full Stack project, which contains it's own repo
 /Nformd/*
+
+# Ignore the JavaScript game, which contains it's own repo
+/Bat-Man/*
