--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@
 /Nformd/*
 
 # Ignore the JavaScript game, which contains it's own repo
-/Bat-Man/*
+/Pac-Man/*
 
 # Ignore the code-intensive project, which contains it's own repo
 /pQuery/*
